Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -128,24 +128,22 @@ In this paper, we offer a methodological solution to the problem of sensitivity 
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Previous considerations on the effects of the spatial configuration in simulation models}
 
-In 'real-life', different spatial configurations of people in a city tend to be associated with different distributions of income, carbon emissions, educational outcomes, etc. For example, \citet{wheeler2006urban} shows that, in the US, sprawling cities are more unequal than their compact counterparts with respect to income. Dynamically, sprawl consists in the addition of new developments which have been occupied by different groups of population, resulting in a concentration of the wealthy in suburban pockets and of pockets of poverty in the inner city area \citep{jargowsky2002sprawl}. Similarly, in terms of pollution for example, \citet[p.173]{schwanen2001travel} show that \textit{``deconcentration of urban land uses encourages driving and discourages the use of public transport as well as cycling and walking''}. The discussion of these effects has also been associated with the field of geostatistics since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984, FotheringhamWong1991}. For example, \citet{Kwan2012} has argued for a careful examination of what she coins the 'uncertain geographic context problem' (UGCoP), i.e. of the spatial configuration of geographical units even when the size and delineation of the area are the same.\\
+In 'real-life', different spatial configurations of people in a city tend to be associated with different distributions of income, carbon emissions, educational outcomes, etc. For example, \citet{wheeler2006urban} shows that, in the US, sprawling cities are more unequal than their compact counterparts with respect to income. Dynamically, sprawl \added{in American cities} consists in the addition of new developments which have been occupied by different groups of population, resulting in a concentration of the wealthy in suburban pockets and of pockets of poverty in the inner city area \citep{jargowsky2002sprawl}. Similarly, in terms of pollution for example, \citet[p.173]{schwanen2001travel} show that \textit{``deconcentration of urban land uses encourages driving and discourages the use of public transport as well as cycling and walking''}. The discussion of these effects has also been associated with the field of geostatistics since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984, FotheringhamWong1991}. For example, \citet{Kwan2012} has argued for a careful examination of what she coins the 'uncertain geographic context problem' (UGCoP), i.e. of the spatial configuration of geographical units even when the size and delineation of the area are the same.\\
 
-Considerations of such issues in the geographical modelling literature are rather scarce. Despite the opportunity of simulation in the representation of space and its potential observation biases, there have been some noticeable attempts to evaluate the effects of the same set of mechanisms run from different initial spatial conditions, which have focused on the impact of:
+Considerations of such issues in the \replaced{geosimulation}{geographical modelling} literature are rather scarce. \replaced{However,}{Despite the opportunity of simulation in the representation of space and its potential observation biases,} there have been some noticeable attempts \replace{at analysing the impact of three types of initial spatial characteristics on model outcomes}{to evaluate the effects of the same set of mechanisms run from different initial spatial conditions, which have focused on the impact of}:
 \begin{itemize}
 \item The accuracy of geo-localised input data;
 \item The shape, precision and boundaries of the modelled spatial system;
 \item The degree of spatial heterogeneity modelled.
 \end{itemize}
 
-\paragraph{Geo-localised input data accuracy} \citet{Thomasetal2017} show that data selection in LUTI model is inter-related with the delineation of the spatial system boundaries and scale of analysis. They provide a few examples of how the use of Exploratory Spatial Data Analysis (ESDA) prior to simulation runs can help avoiding measurement errors of model behaviour and outcomes. In the context of spatial interaction models, \citet{hagen2012new} acknowledge the dilemma between spatial resolution and the computational burden, and suggest a method of adaptive zoning (where the size of destination zones depends on the distance to origin) to solve it.
+\paragraph{Geo-localised input data accuracy} \citet{Thomasetal2017} show that data selection in LUTI model is inter-related with the delineation of the spatial system boundaries and \added{the} scale of analysis. They provide a few examples on how the use of Exploratory Spatial Data Analysis (ESDA) prior to simulation runs can help avoiding measurement errors of model behaviour and outcomes. In the context of spatial interaction models, \citet{hagen2012new} acknowledge the dilemma between spatial resolution and the computational burden, and suggest a method of adaptive zoning (where the size of destination zones depends on the distance to origin) to solve it.
 
-\paragraph{Spatial system shape, precision, and boundaries} \citet{Axtelletal1996} highlight the sensitivity of the average number of stable cultural regions generated to the effect of the territory width implemented in a version of the Sugarscape model which is docked (i.e. made equivalent to) to Axelrod Culture Model. \citet{FlacheHegselmann2001} show that chances for random emergence of a stable cluster of similar agents in a Schelling-like model are higher in a rectangular grid and lower in a hexagonal grid and that an irregular (Voronoi-diagram) city lattice structure favours migration stabilisation around decentralised clusters of similar agents. \citet{Banos2012} compares the behaviour of Schelling segregation model on city lattices formalized as either grid, random, scale-free and Sierpinski networks and concludes that the presence of cliques in graph-based urban structures favours segregationist behaviours. \citet{LeTexierCaruso2017}, using a set of different theoretical spatial systems, demonstrate the impact of the regularity and aggregation levels, or centrality/periphery effects, on spatial diffusion dynamics of euro coins. Similar issues were also dealt with in physical sciences, as for example \cite{horritt2001effects} studies the effects of grid cell size on the behaviour of a raster flood model and shows that increasing resolution does not increase model prediction performance under a certain limit. Similar conclusions are obtained by \cite{vazquez2002effect}, unveiling an intermediate optimal spatial resolution regarding model performance and computation time. Spatial resolution also plays a role in the Schelling model: \citet{Singhetal2009} show that the segregation patterns for certain tolerance values are strictly a small city phenomenon (8x8 city-lattice) and do not work for a larger spatial lattice (100x100), where segregation appears only for certain combinaisons of tolerance threshold and vacancy density values.
+\paragraph{Spatial system shape, precision, and boundaries} \citet{Axtelletal1996} highlight the sensitivity of the average number of stable cultural regions generated to the effect of the territory width implemented in a version of the Sugarscape model which is docked (i.e. made equivalent to) to Axelrod Culture Model. \citet{FlacheHegselmann2001} show that chances for random emergence of a stable cluster of similar agents in a Schelling-like model are higher in a rectangular grid and lower in a hexagonal grid and that an irregular (Voronoi-diagram) city lattice structure favours migration stabilisation around decentralised clusters of similar agents. \citet{Banos2012} compares the behaviour of Schelling segregation model on city lattices formalized as either grid, random, scale-free and Sierpinski networks and concludes that the presence of cliques in graph-based urban structures favours segregationist behaviours. \citet{LeTexierCaruso2017}, using a set of different theoretical spatial systems, demonstrate the impact of the regularity and aggregation levels, or centrality/periphery effects, on spatial diffusion dynamics of euro coins. Similar issues were also dealt with in physical sciences: for example, \cite{horritt2001effects} studies the effects of grid cell size on the behaviour of a raster flood model and shows that increasing resolution does not increase model prediction performance \replaced{below a certain level}{under a certain limit}. Similar conclusions are obtained by \cite{vazquez2002effect}, unveiling an intermediate optimal spatial resolution regarding model performance and computation time. Spatial resolution also plays a role in the Schelling model: \citet{Singhetal2009} show that the segregation patterns for certain tolerance values are strictly a small city phenomenon (8x8 city-lattice) and do not work for a larger spatial lattice (100x100), where segregation appears only for certain combinations of tolerance threshold and vacancy density values.
 
+\paragraph{Spatial heterogeneity} \citet{StaufferSolomon2007} introduce asymetric interactions and empty residences in Schelling's model run on a large and regular lattice. They reveal conjoint and non-linear effects on the vacancy rates and tolerance levels on segregation patterns. \citet{Gauvinetal2010} run Schelling's segregation process in an open city-lattice to study how the variations in tolerance levels, vacancy rates and city attractiveness may create lines of vacancy lots between clusters of agents. They conclude on the functional role of vacancies, which allow weakly tolerant agents to live and be satisfied in a city environment they nevertheless perceive as hostile. \citet{HatnaBenenson2012} show that their model replications run on a 50x50 torus with 2\% of empty cells were not sensitive to the initial patterns (random and fully segregated distribution of agents). In ecology, \citet{smith2002predicting} study the spread of a disturbance in an heterogeneous landscape using a percolation model, and show that landscape structure has a significant influence on final patterns of contamination outcome. In a spatial epidemics model for an infectious disease, parameterised on real data, \citet{smith2002predicting} finds that the physical landscape heterogeneity, in particular the presence of rivers, locally influence the propagation speed.
 
-\paragraph{Spatial heterogeneity} \citet{StaufferSolomon2007} introduce asymetric interactions and empty residences in Schelling's model run on a large and regular lattice. They reveal conjoint and non-linear effects on the vacancy rates and tolerance levels on segregation patterns. \citet{Gauvinetal2010} run Schelling's segregation process in an open city-lattice to study how the variations in tolerance levels, vacancy rates and city attractiveness may create lines of vacancy lots between clusters of agents. They conclude on the functional role of vacancies, which allow weakly tolerant agents to live and be satisfied in a city environment they nevertheless perceive as hostile. \citet{HatnaBenenson2012} show that their model replications run on a 50x50 torus with 2\% of empty cells were not sensitive to the initial patterns (random and fully segregated distribution of agents). In ecology, \citet{smith2002predicting} study the spread of a disturbance in an heterogeneous landscape using a percolation model, and show that landscape structure has a significant influence on final patterns of contamination outcome. In a spatial epidemics model for an infectious disease, parametrised on real data, \citet{smith2002predicting} finds that the physical landscape heterogeneity, in particular the presence of rivers, locally influence the propagation speed.
-
-
- Generally, sensitivity analyses have focused either on the spatial context (extent of the environment, shape of the zones if applicable - squares, hexagons, etc., objects - links, rasters, etc.) \replaced{or}{either} on the spatial encoding of the heterogeneity of space (algorithms of disaggregation, interpolation, etc.), but rarely on both at the same time, \added{offering a systematic inquiry into the impact of systematically defined spatial inputs on the model outputs. More so, the references cited in this section are few compared to the mass of geosimulation articles published without any mention of dependence of output on initial spatial condition.} 
+Generally, sensitivity analyses have focused either on the spatial context (extent of the environment, shape of the zones if applicable - squares, hexagons, etc., objects - links, rasters, etc.) \replaced{or}{either} on the spatial encoding of the heterogeneity of space (algorithms of disaggregation, interpolation, etc.), but rarely on both at the same time. \added{More so, the references cited in this section are few compared to the mass of geosimulation articles published without any mention of dependence of output on initial spatial condition.} 
  
  
 %\cite{ligmann2013spatially}
@@ -157,7 +155,7 @@ In this paper, we build on these contributions and go further by systematically 
 \section{Methods}
 %%%%%%%%%%%%%%%%%%%%%%
 
-The general method workflow of our method is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a spatial generator which depends on \replaced{its very own set of parameters and feeds the model $\mu$ at initialisation (lower branch). We call these parameters ``generator parameters'' to distinguish from the standard parameters of the models and highlight their higher position in the simulation process}{meta-parameters and feeds the model $\mu$ at initialisation (lower branch)}. The resulting configurations \emph{can be} clustered into qualitative types of spatial patterns. The sensitivity analysis relates to the model's parameters to how the density spatial distribution was generated and the pattern of density generated in order to produce qualitative knowledge from the model and its behaviour. In particular, we want to emphasize that spatial effects derive not only from grid size or shape effects, but also from the heterogeneity of the distribution of geographical entities (people, housing, networks, etc.) in space. In the models we used as examples, the initial spatial configurations can be either flat or heterogeneous, monocentric or polycentric, based on external databases and on internal modelling (generation of synthetic population for instance \citep{bhat1999activity}).
+The general method workflow of our method is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a spatial generator which depends on \replaced{its very own set of parameters and feeds the model $\mu$ at initialisation (lower branch). We call these parameters ``generator parameters'' to distinguish them from the standard parameters of the models and to highlight their higher position in the simulation process}{meta-parameters and feeds the model $\mu$ at initialisation (lower branch)}. The resulting configurations \emph{can be} clustered into qualitative types of spatial patterns. The sensitivity analysis relates the \added{variations in the} model's \replaced{outcomes}{parameters} to how the density spatial distribution was generated and \added{to} the patterns of density generated. \deleted{in order to produce qualitative knowledge from the model and its behaviour. In particular, we want to emphasize that spatial effects derive not only from grid size or shape effects, but also from the heterogeneity of the distribution of geographical entities (people, housing, networks, etc.) in space. In the models we used as examples, the initial spatial configurations can be either flat or heterogeneous, monocentric or polycentric, based on external databases and on internal modelling (generation of synthetic population for instance \citep{bhat1999activity}).
 %%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}[htbp] 
 \begin{center} 
@@ -484,12 +482,34 @@ For both models we estimate the Sharpe ratios for each indicator by
 %%%%%%%%%%%%%
 
 
+%%%%%%%%%%%%%%%
 \section{\added{Comparison of phase diagram with other distances}}
 
-\added{We describe here the tests done with other distances to compare phase diagrams.}
+\added{We describe here the tests done with other distances to compare phase diagrams. We tested normalized Minkovski distances, defined by $d(x,y) = \left(\frac{1}{N}\cdot \sum_i \left|x_i - y_i\right|^{\alpha}\right)^{\frac{1}{\alpha}}$, for varying values of $\alpha$ from $\alpha = 1$ (Manhattan distance) to $\alpha = 1000$ (close to the infinite norm), including $\alpha = 2$ (Euclidian distance) which is}
+
+% Schelling
+% [1] "alpha = 1"
+%   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+%0.00000 0.02838 0.06263 0.10608 0.16818 0.37018 
+%[1] "alpha = 2"
+%   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+% 0.0000  0.1520  0.2517  0.3107  0.4359  0.8155 
+%[1] "alpha = 3"
+%   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+% 0.0000  0.3709  0.5133  0.5860  0.7435  1.2930 
+%[1] "alpha = 10"
+%   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+%  0.000   2.083   2.431   2.380   2.713   3.664 
+%[1] "alpha = 1000"
+%   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+%  0.000   3.481   3.868   3.960   4.262   6.781
 
 
 
+
+
+
+%%%%%%%%%%%%%%%
 \section{\added{Pseudo-code for models}}
 \label{app:code}
 
